eks-jc-chart/templates/flask-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: flask-app
spec: 
  replicas: 2
  selector: 
    matchLabels:
      component: web
  template:
    metadata: 
      labels: 
        component: web
    spec: 
      containers: 
        - name: flask-client
          image: juliocarpio4/flask-app
          ports: 
            - containerPort: 5000
