eks-jc-chart/templates/nginx-static-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: nginx-static
spec: 
  replicas: 1
  selector: 
    matchLabels:
      component: static
  template:
    metadata: 
      labels: 
        component: static
    spec: 
      containers: 
        - name: nginx-static
          image: juliocarpio4/nginx-static
          ports: 
            - containerPort: 80
