eks-jc-chart/templates/flask-app-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: flask-app-ip-service
spec: 
  type: ClusterIP
  selector: 
    component: web
  ports: 
    - port: 5000
      targetPort: 5000
