eks-jc-chart/templates/nginx-static-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: nginx-static-ip-service
spec: 
  type: ClusterIP
  selector: 
    component: static
  ports: 
    - port: 80
      targetPort: 80
