eks-jc-chart/templates/ingress-service.yaml
apiVersion: extensions/v1beta1 
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
  
spec: 
  rules: 
    - http: 
        paths: 
          - path: /?(.*)
            backend: 
              serviceName: flask-app-ip-service
              servicePort: 5000
          - path: /images/?(.*)
            backend: 
              serviceName: nginx-static-ip-service
              servicePort: 80
